atualização do conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Criação de Site</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Aprendendo com Curso Em Video</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus nihil doloremque voluptatibus, aliquam nemo aspernatur aperiam quia consectetur exercitationem ratione, temporibus accusantium voluptas architecto impedit veritatis fugiat nulla. Libero, laboriosam!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Git e Github</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi alias officia sequi hic debitis non maxime? Totam reiciendis modi sint fugiat maiores illo quaerat magnam similique. Praesentium sequi alias voluptatibus?</p>
         </article>
     </main>
 </body>
