--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>Criação de Site</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Aprendendo">
         </header>
         <article>
             <h2>Aprendendo com Curso Em Video</h2>
