add arquivos e mudanças no site

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         </header>
         <article>
             <h2>Aprendendo com Curso Em Video</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso Em Video (html)">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus nihil doloremque voluptatibus, aliquam nemo aspernatur aperiam quia consectetur exercitationem ratione, temporibus accusantium voluptas architecto impedit veritatis fugiat nulla. Libero, laboriosam!</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML</a></p>
         </article>
         <article>
-            <h2>Curso de Git e Github</h2>
+            <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi alias officia sequi hic debitis non maxime? Totam reiciendis modi sint fugiat maiores illo quaerat magnam similique. Praesentium sequi alias voluptatibus?</p>
         </article>
     </main>
